# rsef-rs

./: Cargo.toml  README.md  codecov.yml
.github/workflows/: CI.yml  Scheduled.yml  on_push.yml  on_schedule.yml  on_tag.yml  pull_requests.yml
src/: download.rs  lib.rs
tests/: readme.rs
