[package]
name = "rsef-rs"
version = "0.2.0"
authors = ["Christian Veenman <chris_veenman@hotmail.com>"]
edition = '2018'
readme = "README.md"
keywords = ["rsef", "parser", "rir", "ripe", "apnic", "lacnic", "arin", "afrinic"]
categories = ["parsing"]
repository = "https://github.com/DevQps/rsef-rs"
homepage = "https://github.com/DevQps/rsef-rs"
documentation = "https://docs.rs/rsef-rs"
description = "A library for downloading and parsing RIR Statistics Exchange Format (RSEF) listings."
license = "GPL-3.0"
exclude = [
    "README.md",
    "tests/*",
    ".github/*"
]

[badges]
codecov = { repository = "DevQps/rsef-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
# Allows a user to download the RSEF listings.
download = ["reqwest", "bzip2", "libflate", "chrono"]

# No feature is included in the default distribution.
default = []

[dependencies]
reqwest = { version = "0.9", optional = true }
bzip2 = { version = "0.3", optional = true }
libflate = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }