[package]
name = "rsef-rs"
version = "0.3.0"
authors = ["Christian <devqps@protonmail.com>"]
edition = '2018'
readme = "README.md"
keywords = ["rsef", "parser", "rir"]
categories = ["parsing"]
repository = "https://github.com/DevQps/rsef-rs"
homepage = "https://github.com/DevQps/rsef-rs"
documentation = "https://docs.rs/rsef-rs"
description = "A library for downloading and parsing RIR Statistics Exchange Format (RSEF) listings."
license = "GPL-3.0"
exclude = [
    ".github/*"
]

[badges]
codecov = { repository = "DevQps/rsef-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
# Allows a user to download the RSEF listings.
download = ["reqwest", "bzip2", "libflate", "chrono", "tokio"]

# No feature is included in the default distribution.
default = ["download"]

[dependencies]
reqwest = { version = "0.9", optional = true }
bzip2 = { version = "0.4", optional = true }
libflate = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt", "rt-multi-thread"]}